trailsapi/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trails
  namespace: trails
  labels:
    app: trails
spec:
  replicas: 3
  selector:
    matchLabels:
      app: trails
  template:
    metadata:
      name: trails
      labels:
        app: trails
    spec:
      tolerations:
      - key: kubernetes.io/arch
        operator: "Equal"
        value: arm
        effect: "NoSchedule"
      containers:
        - name: trails
          image: nashluffy/trailsapi:latest
          ports:
          - name: http
            containerPort: 8080
