trailsapi/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: trails
  name: trails-service
  namespace: trails
spec:
  ports:
    - protocol: TCP
      name: flask-http-tcp
      port: 8080
      targetPort: 8080
  type: NodePort
  selector:
    app: trails
