trailsapi/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: api-ingress
  namespace: trails
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  tls:
  - hosts:
    - api.nashluffman.com
    secretName: api-tls
  rules:
  - host: api.nashluffman.com
    http:
      paths:
      - path: /trails
        backend:
          serviceName: trails-service
          servicePort: 8080
